# C_StateMachine

./: CMakeLists.txt  README.md  main.c
Example/: CentrifugeTest.h  Motor.h
StateMachine/: StateMachine.h
dynamic_memory/: fb_allocator.h
